[gd_scene load_steps=2 format=3 uid="uid://brnkgd403v5xi"]

[ext_resource type="Script" uid="uid://dq2jmfrm3b5g3" path="res://scenes/menus/lobby_menu.gd" id="1_1jgcr"]

[node name="LobbyMenu" type="CanvasLayer" unique_id=759588324]
script = ExtResource("1_1jgcr")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=608930178]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1058346148]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1688165957]
layout_mode = 2

[node name="LobbyName" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=2040124271]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 42)
layout_mode = 2
text = "warspace's lobby"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=789997204]
layout_mode = 2
size_flags_horizontal = 10

[node name="LeaveLobbyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer" unique_id=837030822]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Leave Lobby"

[node name="MemberList" type="PanelContainer" parent="MarginContainer/VBoxContainer" unique_id=761485184]
layout_mode = 2
size_flags_vertical = 3
